--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<img src="./images/IMG_20210308_150650.jpg" alt="Portrait">
+								<img src="./images/IMG_20210308_150650.jpg" alt="Portrait" class="portrait">
 								<p>I am currently enrolled in a master program called Artificial Intelligence and Data Science at the Deggendorf Institute of Technology.
 									My master studies is a join program with the University of South Bohemia, where I've finished my first semester.
 									I am in the third semester and in the progress of finishing my master thesis. I have 1,5 years of experience as a Software Engineer and was studying the bachelor course Applied Computer Science at the Deggendorf Institue of Technology.
