--- a/index.html
+++ b/index.html
@@ -44,8 +44,22 @@
 
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>As a Software Engineer I was developing a C++ application which collects sensory device data and sends it to an IoT Edge device or directly
+									to a Azure Cloud endpoint where it is routed to a File Storage instance. After that the data will be queried and displayed by dashboards.
+								</p>
+								<p>
+									Through this work I was able to get professional experience in following technologies:
+									<ul>
+										<li>C++</li>
+										<li>Python</li>
+										<li>Docker</li>
+										<li>Microsoft Azure</li>
+										<li>Linux</li>
+										<li>Deployment of dockerized applications</li>
+										<li>IoT</li>
+									  </ul>
+								</p>
+								
 							</article>
 
 							<article id="about">
