--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="POST" action="http://formspree.io/thurnbauermatthias@gmail.com">
+								<form method="POST" action="https://formspree.io/f/mqkjdany">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
