--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="#contact">Contact</a></li>
+								<li><a href="#projects">Projects</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -58,6 +59,30 @@
 									  </ul>
 								</p>
 								
+							</article>
+
+							<article id="projects">
+								<h2 class="major">Study Projects</h2>
+								<p>During my master studies I had to do several projects including a Naive Bayes Spam Filter and two object detection projects.</p>
+
+								<h3>Naive Bayes Spam Filter</h3>
+								<p>As the title says this project is a custom spam filter based on the Naive Bayes algorithm.
+
+								</p>
+
+								<h3>Detecting bavarian playing cards</h3>
+								<p>This was a semestral project in the scope of a course called Computational Intelligence during my studies at the University of South Bohemia.
+									We had to create our own dataset and could use which object detection method best suits our use case.
+									I chose to use YoloV3 and YoloV5 to tackle this project. <br>
+									To the dataset: <br>
+									The dataset consists of 136 images in total, where the train/val/test split is 110, 20 and 6, respectively. I've labeled the images with an online tool called roboflow. <br>
+									Here you can see a result image for both algorithms: <br>
+									<img class="result" src="./images/detection_result_image_yolov3.PNG" alt="Result for YoloV3">
+									<img class="result" src="./images/detection_result_image_yolov5.jpg" alt="Result for YoloV5">
+								</p>
+
+								<h3>Detecting pills in blister packs</h3>
+								<p></p>
 							</article>
 
 							<article id="contact">
