--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 							<ul>
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Work</a></li>
-								<li><a href="#contact">Contact</a></li>
 								<li><a href="#projects">Projects</a></li>
+								<li><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -63,14 +63,28 @@
 
 							<article id="projects">
 								<h2 class="major">Study Projects</h2>
-								<p>During my master studies I had to do several projects including a Naive Bayes Spam Filter and two object detection projects.</p>
+								<p>During my master studies I had to do several projects including a Naive Bayes Spam Filter and two object detection projects.
+									To take a look at the projects use the navigation bar below.
+								</p>
 
-								<h3>Naive Bayes Spam Filter</h3>
+								<nav>
+									<ul>
+										<li><a href="#spam-filter">Spam-Filter</a></li>
+										<li><a href="#playingcards">Playing Card Detection</a></li>
+										<li><a href="#pills">Pill Detection</a></li>
+									</ul>
+								</nav>
+							</article>
+
+							<article id="spam-filter">
+								<h2 class="major">Naive Bayes Spam Filter</h3>
 								<p>As the title says this project is a custom spam filter based on the Naive Bayes algorithm.
 
 								</p>
+							</article>
 
-								<h3>Detecting bavarian playing cards</h3>
+							<article id="playingcards">
+								<h2 class="major">Detecting bavarian playing cards</h3>
 								<p>This was a semestral project in the scope of a course called Computational Intelligence during my studies at the University of South Bohemia.
 									We had to create our own dataset and could use which object detection method best suits our use case.
 									I chose to use YoloV3 and YoloV5 to tackle this project. <br>
@@ -81,7 +95,10 @@
 									<img class="result" src="./images/detection_result_image_yolov5.jpg" alt="Result for YoloV5">
 								</p>
 
-								<h3>Detecting pills in blister packs</h3>
+								
+							</article>
+							<article id="pills">
+								<h2 class="major">Detecting pills in blister packs</h3>
 								<p></p>
 							</article>
 
