--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 
 								<nav>
 									<ul>
-										<li><a href="#projects#spam-filter">Spam-Filter</a></li>
-										<li><a href="#projects#playingcards">Playing Card Detection</a></li>
-										<li><a href="#projects#pills">Pill Detection</a></li>
+										<li><a href="#spam-filter">Spam-Filter</a></li>
+										<li><a href="#playingcards">Playing Card Detection</a></li>
+										<li><a href="#pills">Pill Detection</a></li>
 									</ul>
 								</nav>
 							</article>
