add redirect on close

--- a/index.html
+++ b/index.html
@@ -87,11 +87,14 @@
 								<h2 class="major">Detecting bavarian playing cards</h3>
 								<p>This was a semestral project in the scope of a course called Computational Intelligence during my studies at the University of South Bohemia.
 									We had to create our own dataset and could use which object detection method best suits our use case.
-									I chose to use YoloV3 and YoloV5 to tackle this project. <br>
+									I chose to use YoloV3 and YoloV5 to tackle this project. <br><br>
 									To the dataset: <br>
 									The dataset consists of 136 images in total, where the train/val/test split is 110, 20 and 6, respectively. I've labeled the images with an online tool called roboflow. <br>
-									Here you can see a result image for both algorithms: <br>
+									Here you can see a result image for both algorithms: <br><br>
+									<h3>Result for YoloV3</h3>
 									<img class="result" src="./images/detection_result_image_yolov3.PNG" alt="Result for YoloV3">
+									<br>
+									<h3>Result for YoloV5</h3>
 									<img class="result" src="./images/detection_result_image_yolov5.jpg" alt="Result for YoloV5">
 								</p>
 
