add redirect on close

--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
 									Here you can see a result image for both algorithms: <br><br>
 									<h3>Result for YoloV3</h3>
 									<div >
-										<img class="result" src="./images/detection_result_image_yolov3.PNG" alt="Result for YoloV3" onclick="enlargeImg()">
+										<img class="result" id="result1" src="./images/detection_result_image_yolov3.PNG" alt="Result for YoloV3">
 									</div>
 									
 									<br><br>
 									<h3>Result for YoloV5</h3>
 									<div>
-										<img class="result" src="./images/detection_result_image_yolov5.jpg" alt="Result for YoloV5" onclick="enlargeImg()">
+										<img class="result" id="result2" src="./images/detection_result_image_yolov5.jpg" alt="Result for YoloV5">
 									</div>
 									
 								</p>
