adding supervision project

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 										<li>IoT</li>
 									  </ul>
 								</p>
+								<p>
+									I was also responsible for supervising some student projects. One notable mention is a predictive maintenance application where the student was able to
+									identify a faulty vibration motor before the machine came to a halt.
+								</p>
 								
 							</article>
 
